--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:9.8.0'
 
     compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'com.google.android.gms:play-services-appinvite:9.8.0'
 }
 
  apply plugin: 'com.google.gms.google-services'
